--- a/src/MiniCrm.UI/Views/Project/Edit.cshtml
+++ b/src/MiniCrm.UI/Views/Project/Edit.cshtml
@@ -8,7 +8,13 @@
 
 <hr />
 
-<div class="row">
+<div class="d-flex justify-content-center align-items-center">
+    <div class="spinner-border text-primary" role="status" id="projectLoader" style="display: none;">
+        <span class="visually-hidden">Loading...</span>
+    </div>
+</div>
+
+<div class="row" id="projectRow" style="display: none;">
     <div class="col-md-12">
         <form asp-action="Index" class="project-edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
