--- a/src/MiniCrm.UI/Views/Project/Create.cshtml
+++ b/src/MiniCrm.UI/Views/Project/Create.cshtml
@@ -57,6 +57,13 @@
                 </select>
                 <span asp-validation-for="ManagerId" class="text-danger"></span>
             </div>
+            <div class="form-group mb-3">
+                <label asp-for="Tasks" class="control-label">Выберите задачи</label>
+                <select asp-for="Tasks" class="form-select" id="projectTasks">
+                    <option value="" selected disabled>Выберите несколько задач</option>
+                </select>
+                <span asp-validation-for="Tasks" class="text-danger"></span>
+            </div>
             <div class="form-group d-flex justify-content-end">
                 <button type="submit" class="btn btn-primary">
                     Создать
