--- a/src/MiniCrm.UI/Views/Shared/_Layout.cshtml
+++ b/src/MiniCrm.UI/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Employee" asp-action="Index">Сотрудники</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Task" asp-action="Index">Задачи</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
@@ -56,6 +59,7 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/project.js" asp-append-version="true"></script>
     <script src="~/js/employee.js" asp-append-version="true"></script>
+    <script src="~/js/task.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
