--- a/src/MiniCrm.UI/Views/_ViewImports.cshtml
+++ b/src/MiniCrm.UI/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using MiniCrm.UI
 @using MiniCrm.UI.Models
 @using MiniCrm.UI.Models.DTO_s
+@using MiniCrm.UI.Extensions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
