--- a/src/MiniCrm.UI/Views/Home/Index.cshtml
+++ b/src/MiniCrm.UI/Views/Home/Index.cshtml
@@ -17,9 +17,12 @@
             </select>
         </div>
 
-        <a asp-area="" asp-controller="Project" asp-action="Create" class="btn btn-warning">
-            <i class="bi bi-plus-square me-1"></i> Добавить
-        </a>
+        @if (Context.IsInRole("project_manager") || Context.IsInRole("manager"))
+        {
+            <a asp-area="" asp-controller="Project" asp-action="Create" class="btn btn-warning">
+                <i class="bi bi-plus-square me-1"></i> Добавить
+            </a>
+        }
     </div>
 
     @if (Model.Count() != 0)
