--- a/src/MiniCrm.UI/Views/Task/Index.cshtml
+++ b/src/MiniCrm.UI/Views/Task/Index.cshtml
@@ -17,9 +17,12 @@
             </select>
         </div>
 
-        <a asp-area="" asp-controller="Task" asp-action="Create" class="btn btn-warning">
-            <i class="bi bi-plus-square me-1"></i> Добавить
-        </a>
+        @if (Context.IsInRole("project_manager") || Context.IsInRole("manager"))
+        {
+            <a asp-area="" asp-controller="Task" asp-action="Create" class="btn btn-warning">
+                <i class="bi bi-plus-square me-1"></i> Добавить
+            </a>
+        }
     </div>
 
     @if (Model.Count() != 0)
@@ -54,7 +57,13 @@
                         <td>@item.Name</td>
                         <td>@item.AuthorId</td>
                         <td>@item.ExecutorId</td>
-                        <td>@item.Status</td>
+                        <td>
+                            <select class="form-select" id="taskStatus">
+                                <option value="Todo_@item.Id" selected="@(item.Status == "Todo")">Todo</option>
+                                <option value="InProgress_@item.Id" selected="@(item.Status == "InProgress")">In Progress</option>
+                                <option value="Done_@item.Id" selected="@(item.Status == "Done")">Done</option>
+                            </select>
+                        </td>
                         <td>@item.Priority</td>
                         <td>@item.Description</td>
                         <td>
